<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context="com.example.sistemas.myapplicationimc.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sal"
                    android:text="@string/salir" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="59dp"
                    android:layout_height="42dp"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="limpiar"
                    app:srcCompat="@drawable/re" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:gravity="center_vertical|center"
                    android:text="@string/calcular"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textColorLink="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.52"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/peso1"
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/peso"
                    android:inputType="textPersonName|number" />

                <EditText
                    android:id="@+id/estaura1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/estatura"
                    android:inputType="textPersonName|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.52"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:onClick="operar"
                    android:text="@string/calcular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.52"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resultado" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.52"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.57"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.83"
                        android:gravity="center"
                        android:text="@string/idmasa" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.83"
                        android:gravity="center_vertical|center"
                        android:text="@string/clasicacion" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.83" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="194dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/imc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:singleLine="false" />

                    <EditText
                        android:id="@+id/clasificacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/cla22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.52"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="acercade"
                    android:text="Acerca de" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Karol Burgos Narvaez"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/im3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/imf" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
